調整螢幕縮小的尺寸

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         @media (max-width: 576px) {
             .box {
                 padding: 16px;
+                height: 50vh;
             }
 
             .box p {
